// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account fees utility functions formatMethodFeesTooltip() displays base fee, when only promo discount without percentage or fixed 1`] = `
<div>
  <div
    class="wcpay-fees-tooltip"
  >
    <div>
      <div>
        Base fee
      </div>
      <div>
        12.3% + $4.57
      </div>
    </div>
    <div>
      <div>
        International payment method fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Foreign exchange fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Total per transaction
      </div>
      <div
        class="wcpay-fees-tooltip__bold"
      >
        14.3% + $4.57
      </div>
    </div>
    <div
      class="wcpay-fees-tooltip__hint-text"
    >
      <span>
        <a
          href="https://woocommerce.com/document/woopayments/fees-and-debits/fees/#united-states"
          rel="noreferrer"
          target="_blank"
        >
          Learn more
        </a>
         about WooPayments Fees in your country
      </span>
    </div>
  </div>
</div>
`;

exports[`Account fees utility functions formatMethodFeesTooltip() displays base percentage and fixed fee - no custom fee nor discount 1`] = `
<div>
  <div
    class="wcpay-fees-tooltip"
  >
    <div>
      <div>
        Base fee
      </div>
      <div>
        12.3% + $4.57
      </div>
    </div>
    <div>
      <div>
        International payment method fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Foreign exchange fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Total per transaction
      </div>
      <div
        class="wcpay-fees-tooltip__bold"
      >
        14.3% + $4.57
      </div>
    </div>
    <div
      class="wcpay-fees-tooltip__hint-text"
    >
      <span>
        <a
          href="https://woocommerce.com/document/woopayments/fees-and-debits/fees/#united-states"
          rel="noreferrer"
          target="_blank"
        >
          Learn more
        </a>
         about WooPayments Fees in your country
      </span>
    </div>
  </div>
</div>
`;

exports[`Account fees utility functions formatMethodFeesTooltip() displays custom fee details, when applicable 1`] = `
<div>
  <div
    class="wcpay-fees-tooltip"
  >
    <div>
      <div>
        Base fee
      </div>
      <div>
        10.1% + $4.01
      </div>
    </div>
    <div>
      <div>
        International payment method fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Foreign exchange fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Total per transaction
      </div>
      <div
        class="wcpay-fees-tooltip__bold"
      >
        12.1% + $4.01
      </div>
    </div>
    <div
      class="wcpay-fees-tooltip__hint-text"
    >
      <span>
        <a
          href="https://woocommerce.com/document/woopayments/fees-and-debits/fees/#united-states"
          rel="noreferrer"
          target="_blank"
        >
          Learn more
        </a>
         about WooPayments Fees in your country
      </span>
    </div>
  </div>
</div>
`;
